# fido

./: .gitignore  .opf.yml  .project  .pydevproject  .travis.yml  CNAME  CONTRIBUTING.md  Dockerfile  LICENSE.txt  MANIFEST  MANIFEST.in  Makefile  README.in  README.md  README.txt  RELEASENOTES.md  fido.iss  index.md  manifest.json  matchprintf.txt  pyproject.toml  setup.cfg  setup.py  sonar-project.properties  test.py  todo.py  todo.txt
.attic/: http.py
.github/workflows/: test-pr.yml
_includes/: header.html  navbar.html
_layouts/: page.html
attic/: .opf.yml  todo.txt
data/anjackson/: format.png-1.0.xml  format.tiff-6.xml  format_extension_template.xml
data/pronom/: formats.xml
doc/scores/: 2011-02-16-format_scores.csv
docs/: CNAME
docs/_includes/: footer.html  navbar.html
docs/_layouts/: page.html
fido/: __init__.py  argparselocal.py  char_handler.py  cli_args.py  constants.py  fetch.sh  fido.bat  fido.py  fido.sh  format_fixup.py  formats.py  opfpronomutils.py  package.py  prepare.py  pronomutils.py  run.py  signature.py  testfido.py  toxml.py  update_signatures.py  utils.py  versions.py
fido/conf/: DROID_SignatureFile-v104.xml  DROID_SignatureFile-v60.xml  DROID_SignatureFile-v61.xml  DROID_SignatureFile-v65.xml  DROID_SignatureFile-v66.xml  DROID_SignatureFile-v68.xml  DROID_SignatureFile-v69.xml  DROID_SignatureFile-v70.xml  DROID_SignatureFile-v75.xml  DROID_SignatureFile-v77.xml  DROID_SignatureFile-v78.xml  DROID_SignatureFile-v82.xml  DROID_SignatureFile-v83.xml  DROID_SignatureFile-v84.xml  DROID_SignatureFile-v88.xml  DROID_SignatureFile-v90.xml  DROID_SignatureFile-v92.xml  DROID_SignatureFile-v93.xml  DROID_SignatureFile-v95.xml  DROID_SignatureFile-v96.xml  DROID_SignatureFile_V55.xml  DROID_SignatureFile_V56.xml  container-signature-20110204.xml  container-signature-20121218.xml  container-signature-20150327.xml  container-signature-20151217.xml  container-signature-20180417.xml  container-signature-20200121.xml  fido-formats-0.3.xsd  fido-formats.xsd  format.png-1.0.xml  format_extension_template_0.2.xml  format_extension_template_0.3.xml  format_extensions.xml  formats-v104.xml  formats-v107.xml  formats-v109.xml  formats-v116.xml  formats-v60.xml  formats-v61.xml  (+17 more)
fido/pronom/: __init__.py  http.py  soap.py
fido/signatures/: __init__.py  config.py  const.py  controller.py  webapp.py
fido/signatures/resources/: __init__.py
fido/signatures/resources/container/: __init__.py
fido/signatures/resources/container/20180920/: container-signature-20180920.xml
fido/signatures/resources/format/extensions/: format_extensions.xml
fido/signatures/resources/format/v74/: DROID_SignatureFile-v74.xml
fido/signatures/resources/format/v78/: formats-v78.xml
fido/signatures/resources/format/v81/: DROID_SignatureFile-v81.xml  formats-v81.xml
fido/signatures/resources/format/v82/: formats-v82.xml
fido/signatures/resources/format/v92/: formats-v92.xml
fido/signatures/resources/format/v94/: DROID_SignatureFile-v94.xml  formats-v94.xml
fido/signatures/resources/format/v96/: formats-v96.xml
fido/signatures/resources/format/v97/: DROID_SignatureFile-v97.xml  formats-v97.xml
fido/signatures/templates/: about.html  base.html  except.html  page.html
jar/: BUILD.txt  README.txt
jar/Package/: Main.java  build.sh
jar/Package/Lib/: readline.py  socket.py
jar/Package/Lib/test/: test_select.py  test_select_new.py  test_socket.py
jar/Package/Lib/test/decimaltestdata/: and.decTest  class.decTest  comparetotal.decTest  comparetotmag.decTest  copy.decTest  copyabs.decTest  copynegate.decTest  copysign.decTest  ddAbs.decTest  ddAdd.decTest  ddAnd.decTest  ddBase.decTest  ddCanonical.decTest  ddClass.decTest  ddCompare.decTest  ddCompareSig.decTest  ddCompareTotal.decTest  ddCompareTotalMag.decTest  ddCopy.decTest  ddCopyAbs.decTest  ddCopyNegate.decTest  ddCopySign.decTest  ddDivide.decTest  ddDivideInt.decTest  ddEncode.decTest  ddFMA.decTest  ddInvert.decTest  ddLogB.decTest  ddMax.decTest  ddMaxMag.decTest  ddMin.decTest  ddMinMag.decTest  ddMinus.decTest  ddMultiply.decTest  ddNextMinus.decTest  ddNextPlus.decTest  ddOr.decTest  (+75 more)
jar/Package/fido/: __init__.py  fido.py
jar/Package/org/python/: version.properties
java/: README.markdown  pom.xml
java/src/jaxws/: catalog.xml
java/src/wsdl/: catalog.xml
oldstuff/data/anjackson/: format_extension_template.xml
oldstuff/data/pronom/: formats.xml
oldstuff/doc/scores/: 2011-02-16-format_scores.csv
oldstuff/java/: README.markdown  pom.xml
requirements/: packaging.txt
src/: setup.py
src/fido/: fetch.py  format_fixup.py  formats.py  prepare.py  profile.py  run.py  setup.py  signature.py
test/: expected.csv
test-data/: download.py  fido.chp  fido.csv  fido.doc  fido.dwf  fido.eps  fido.html  fido.java  fido.kml  fido.kmz  fido.pps  fido.ppt  fido.ps  fido.pst  fido.pub  fido.sql  fido.swf  fido.tif  fido.txt  fido.wp  fido.xbm  fido.xlsx  fido.xml  generate.py  govdocs.py  manifest.txt
tests/: test_cli_args.py  test_fido.py  test_package.py  test_prepare.py
tests/fixtures/: foo.tar
tests/pronom/: test_soap.py
(+113 files in other folders)
